# Public-funds-integrity-platform

./: .gitignore  README.md  Start-PFIP-Dev.ps1  Stop-PFIP-Dev.ps1
apps/api/: pyproject.toml
apps/api/app/: __init__.py  dependencies.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: entities.py  map_view.py  search.py
apps/api/app/domain/: models.py
apps/api/app/repositories/: base.py  sample_data.py  washington_open_checkbook.py
apps/api/app/schemas/: common.py  entity.py  map.py
apps/api/app/services/: entities.py  risk_engine.py
apps/api/pfip_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_risk_engine.py
apps/web/: package-lock.json  package.json  playwright.config.ts  (+2 more)
db/: schema.sql  seed.sql
docs/: architecture.md  washington-data-strategy.md
etl/: README.md  pyproject.toml
etl/pfip_etl/: __init__.py  io.py  models.py  pipeline.py  registry.py
etl/pfip_etl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
etl/pfip_etl/connectors/: base.py  california_procurement.py
etl/pfip_etl/normalizers/: procurement.py
etl/pfip_etl/states/: __init__.py
etl/pfip_etl/states/wa/: __init__.py  common.py  county_boundaries.py  dcyf_childcare_candidates.py  dcyf_childcare_verification.py  dcyf_sources.py  doh_sources.py  doh_verification_candidates.py  geo_enrichment.py  geo_rollups.py  hca_managed_care.py  npi_facility_verification.py  open_checkbook.py  open_checkbook_rollups.py  provider_identity_bridge.py  recipient_resolution.py  sos_sources.py  sos_ubi_candidates.py  sos_ubi_verification.py
(+10 files in other folders)
